--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-
+    -name: Build the solution
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v3
@@ -19,9 +19,15 @@ jobs:
         run: |
           npm install
           npm run build
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
+  
   test:
     runs-on: ubuntu-latest
-
+    needs: build
+   
     strategy:
       matrix:
         node-version: [14.x, 16.x]
@@ -30,6 +36,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/download-artifact@master
+      with:
+        name: webpack artifacts
+        path: public
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
