--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Node.js.yml CI workflow file
 
 on:
   push:
@@ -16,8 +16,9 @@ on:
         required: true
 
 jobs:
-  build:
-    name: Build the solution
+  #First Job in same workflow
+  Build_And_Deploy_Job:
+    name: Build the solution and deploy
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v3
@@ -30,9 +31,11 @@ jobs:
           name: webpack artifacts
           path: public/
   
-  test:
+  #Second Job in same workflow file
+  Testing_Job:
     runs-on: ubuntu-latest
-    needs: build
+    #Linking to previous job result 
+    needs: Build_And_Deploy_Job
    
     strategy:
       matrix:
